Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_module_load@reload-with-fault-injection - abort - BUG: kernel NULL pointer dereference, address: 0000000000000000
<7> [515.669378] [drm:drm_mode_debug_printmodeline] Modeline "640x480": 60 25175 640 656 752 800 480 490 492 525 0x40 0xa
<7> [515.669386] [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:294:DP-8]
<7> [515.669401] i915 0000:00:02.0: [drm:intel_display_driver_check_access [i915]] Reject display access from task kworker/5:0[106] (allowed to i915_module_loa[2805])
<7> [515.669646] i915 0000:00:02.0: [drm:intel_dp_hpd_pulse [i915]] DPRX ESI: 02 00 00 00
<7> [515.669729] i915 0000:00:02.0: [drm:intel_dp_hpd_pulse [i915]] got hpd irq on [ENCODER:235:DDI B/PHY B] - short
<7> [515.669811] i915 0000:00:02.0: [drm:drm_dp_mst_topology_get_port_validated [drm_display_helper]] port ffff888120cb1000 (2)
<1> [515.669852] BUG: kernel NULL pointer dereference, address: 0000000000000000
<4> [515.669852] irq event stamp: 955300
<7> [515.670457] i915 0000:00:02.0: [drm:intel_dp_hpd_pulse [i915]] DPRX ESI: 02 00 00 00
<1> [515.752381] #PF: supervisor read access in kernel mode
<1> [515.752382] #PF: error_code(0x0000) - not-present page
<6> [515.752383] PGD 0 P4D 0
<4> [515.752385] Oops: 0000 [#1] PREEMPT SMP NOPTI
<4> [515.752387] CPU: 5 PID: 106 Comm: kworker/5:0 Tainted: G U 6.7.0-CI_DRM_14109-g7648a2467ba2+ #1
<4> [515.793673] hardirqs last enabled at (955299): [<ffffffff81ced9d1>] syscall_enter_from_user_mode+0x21/0x50
<7> [515.814416] i915 0000:00:02.0: [drm:gsc_work [i915]] GT1: GSC Proxy initialized
<7> [515.814780] intel_gt_set_wedged called from intel_gt_set_wedged_on_fini+0xd/0x30 [i915]
<7> [515.872575] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling AUX_B
<4> [515.885472] Hardware name: Intel Corporation Meteor Lake Client Platform/MTL-P DDR5 SODIMM SBS RVP, BIOS MTLPFWI1.R00.3424.D84.2310311355 10/31/2023
<4> [515.885473] Workqueue: events_long drm_dp_mst_link_probe_work [drm_display_helper]