drm/i915: Prevent HW access during init from connector get_modes hooks

Prevent accessing the HW from the get_modes hooks of connectors deriving
the mode list from the display's EDID. drm_edid_connector_add_modes()
will return the mode list based on the EDID which was cached during a
previous detection/get_modes call.

Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/10085
Signed-off-by: Imre Deak <imre.deak@intel.com>